<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="24dp"
    android:gravity="center"
    android:background="@color/branco">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="INFOUNI"
        android:textColor="@color/ciano_primario"
        android:textSize="32sp"
        android:textStyle="bold"
        android:layout_marginBottom="40dp"/>

    <!-- Campo de Email -->
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editEmailLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_email_login"
            android:inputType="textEmailAddress"/>
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Campo de Senha -->
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:passwordToggleEnabled="true"
        android:layout_marginBottom="32dp">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editSenhaLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_senha_login"
            android:inputType="textPassword"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:text="@string/btn_entrar"
        android:backgroundTint="@color/ciano_primario"
        android:textColor="@color/branco"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/txtIrParaCadastro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_ir_para_cadastro"
        android:textColor="@color/ciano_primario"
        android:layout_marginTop="20dp"
        android:padding="8dp"/>

    <ProgressBar
        android:id="@+id/progressLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:indeterminateTint="@color/ciano_primario"
        android:layout_marginTop="16dp"/>

</LinearLayout>